--- a/src/locales/en_US.json
+++ b/src/locales/en_US.json
@@ -3,5 +3,7 @@
     "tomorrow": "Tomorrow",
     "yesterday": "Yesterday",
     "invalid_date": "Invalid date.",
-    "same_date": "Same date"
+    "same_date": "Same date",
+    "must_be_greater": "Must be greater than {{number}}.",
+    "must_be_less": "Must be less than {{number}}."
 }
