--- a/src/locales/da_DK.json
+++ b/src/locales/da_DK.json
@@ -4,6 +4,7 @@
     "yesterday": "I går",
     "invalid_date": "Ugyldig dato.",
     "same_date": "Samme dato",
+    "is_required": "Ugyldig dato.",
     "must_be_greater": "Skal være større end {{number}}.",
     "must_be_less": "Skal være mindre end {{number}}."
 }
