--- a/src/locales/en_US.json
+++ b/src/locales/en_US.json
@@ -4,6 +4,7 @@
     "yesterday": "Yesterday",
     "invalid_date": "Invalid date.",
     "same_date": "Same date",
+    "is_required": "Invalid date.",
     "must_be_greater": "Must be greater than {{number}}.",
     "must_be_less": "Must be less than {{number}}."
 }
