--- a/src/locales/da_DK.json
+++ b/src/locales/da_DK.json
@@ -3,5 +3,8 @@
     "tomorrow": "I morgen",
     "yesterday": "I går",
     "invalid_date": "Ugyldig dato.",
-    "same_date": "Samme dato"
+    "same_date": "Samme dato",
+    "is_required": "Ugyldig dato.",
+    "must_be_greater": "Skal være større end {{number}}.",
+    "must_be_less": "Skal være mindre end {{number}}."
 }
